@@ -5,6 +5,8 @@
 ################################################################################
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
+RH-2012-03-20-1:  Enhancem.   LessTif support (from Fedora)
+
 RH-2012-03-20-0:  Enhancem.   Quick fix for Solaris 11
 
 RH-2012-03-18-0:  Enhancem.   Reduce the no. of X11 libs for libXltree link line
